created components: projects, footer, resume, contact, and card nested inside of portfolio component used for rendering images of past projects, re-factored app.js routing for the switch case of components , used node module for importing React PDF third party library, borrowed div card logic from codepen, created css files for most components styling

--- a/src/index.css
+++ b/src/index.css
@@ -3,13 +3,14 @@ main {
 	margin: 0 auto;
 	max-width: 90%;
   padding: 50px 30px;
+ 
 }
 :root {
   --primary: #8c54ff;
   --secondary: #F3A847;
   --tertiary: #B12704;
   --light: #fafafa;
-  --dark: #000000;
+  --dark: #0a50d1;
   --darker: #111111;
   --error: rgb(228, 46, 1);
   --spacing-one: calc(1rem * 0.5);
