--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,10 +1,15 @@
 
-  .container {
-    display: grid;
+  .card-container {
+    
+    width: 33%;
 
   }
 
+.img {
 
+  position: relative;
+  height: 100%;
+}
 
   .card {
     background: #fff;
