--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@ main {
   --secondary: #F3A847;
   --tertiary: #B12704;
   --light: #fafafa;
-  --dark: #0a50d1;
+  --dark: #8b8f9763;
   --darker: #111111;
   --error: rgb(228, 46, 1);
   --spacing-one: calc(1rem * 0.5);
