commented out contact form, simplified it, added npm bootstrap package, will work on pportfolio cards

--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@ main {
   --primary: #8c54ff;
   --secondary: #F3A847;
   --tertiary: #B12704;
-  --light: #fafafa;
+  --light: #050303;
   --dark: #8b8f9763;
   --darker: #111111;
   --error: rgb(228, 46, 1);
