--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -2,9 +2,23 @@
   .card-container {
     
     width: 33%;
+    border-style: dashed;
 
   }
 
+.card-body {
+  width: 33%;
+}
+
+.card-title {
+  font-size: 2.25rem;
+  font-family: 'Poiret One', cursive;
+}
+
+.card-tools {
+  font-size: 1.1rem;
+  font-family:'Poiret One', cursive;
+}
 .img {
 
   position: relative;
