--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,14 +1,16 @@
 
-  .card-container {
+  .grid-container1 {
     
-    width: 33%;
-    border-style: dashed;
+    display:grid;
+   
+    grid-template-columns: 1fr 1fr 1fr; 
+  
 
   }
 
-.card-body {
+/* .card-body {
   width: 33%;
-}
+} */
 
 .card-title {
   font-size: 2.25rem;
@@ -28,7 +30,9 @@
   .card {
     background: #fff;
     border-radius: 2px;
-    display: inline-block;
+    display: flex;
+    flex-direction: row;
+    flex-wrap:wrap;
     height: 300px;
     margin: 1rem;
     position: relative;
