adjusting css for wrap properties using flexbox and or css grid...still working on that. Also I wnat to resize all screen shot so they dont look blurrresizing screenshots

--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -52,3 +52,10 @@
  /* borrowed from codepen CodePen Home
  Material Design Box Shadows
  Samuel Thornton https://codepen.io/sdthornton/pen/wBZdXq */
+
+ /* On screens that are 600px wide or less, make the columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 300px) {
+  .card {
+    width: 100%;
+  }
+}
