--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -7,10 +7,16 @@
 .grid-container {
     display: grid;
     grid-template-columns: 1fr 1fr;
-
+    /* grid-template-columns: repeat(auto-fill, minmax(400px, 300)); */
 }
 
 .intro {
     margin-top: 10rem;
 }
 
+/* On screens that are 600px wide or less, make the columns stack on top of each other instead of next to each other */
+ @media screen and (max-width: 600px) {
+    .card-grid {
+      width: 100%;
+    }
+  } 
