added some new styling, using css grid for about me and portfolio, due to react nested elements i wasnt able to make the grid items stack

--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@ main {
 }
 :root {
   --primary: #1e0f3b;
-  --secondary: #F3A847;
+  --secondary: #23c2b5;
   --tertiary: #B12704;
   --light: #050303;
   --dark: #13141663;
