--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -1,22 +1,24 @@
 .cover-image {
 
-    border:1px solid black;
+    border:5px groove black;
+    border-radius: 2rem;
     
 }
 
-.grid-container {
+.grid-container2 {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    /* grid-template-columns: repeat(auto-fill, minmax(400px, 300)); */
+    /* grid-template-columns: 1fr 1fr; */
+    grid-gap: 1rem;
+    grid-template-columns: repeat(auto-fill, minmax(500px, 1fr));
 }
 
 .intro {
-    margin-top: 10rem;
+    margin-top: 5rem;
 }
 
 /* On screens that are 600px wide or less, make the columns stack on top of each other instead of next to each other */
  @media screen and (max-width: 600px) {
-    .card-grid {
+    .grid-container {
       width: 100%;
     }
   } 
