--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -3,10 +3,13 @@
     
     display:grid;
    
-    grid-template-columns: 1fr 1fr 1fr; 
-  
-
+    /* grid-template-columns: 1fr 1fr 1fr;  */
+    grid-template-columns: repeat(auto-fill, minmax(500px, 1fr ));
+    /* grid-template-rows:auto; */
+    grid-gap: 1rem;
+    /* column-gap: 10px; */
   }
+
 
 /* .card-body {
   width: 33%;
@@ -29,7 +32,7 @@
 
   .card {
     background: #fff;
-    border-radius: 2px;
+    border-radius: 1rem;
     display: flex;
     flex-direction: row;
     flex-wrap:wrap;
@@ -53,9 +56,9 @@
  Material Design Box Shadows
  Samuel Thornton https://codepen.io/sdthornton/pen/wBZdXq */
 
- /* On screens that are 600px wide or less, make the columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 300px) {
+ /* On screens that are 600px wide or less, make the columns stack on top of each other instead of next to each other
+@media screen and (max-width: 600px) {
   .card {
     width: 100%;
   }
-}
+} */
