added border style to portfolio div cards

--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -33,6 +33,7 @@
   .card {
     background: #fff;
     border-radius: 1rem;
+    border-style:groove;
     display: flex;
     flex-direction: row;
     flex-wrap:wrap;
