--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -24,12 +24,13 @@
   font-size: 1.1rem;
   font-family:'Poiret One', cursive;
 }
-/* .img {
+.img {
 
-  position: relative;
+  position: cover;
   border-radius:1rem;
   height: 100%;
-} */
+  
+}
 
   .card {
     background: #fff;
