--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -1,13 +1,14 @@
 .icon-1 {
-
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    flex-wrap:wrap;
-    
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
 .icon-1 > a {
-
-    padding: 50px;
+  padding: 50px;
 }
