--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,4 +1,5 @@
 
+
   .grid-container1 {
     
     display:grid;
@@ -8,27 +9,35 @@
     /* grid-template-rows:auto; */
     grid-gap: 1rem;
     /* column-gap: 10px; */
+    text-decoration: none;
   }
 
-
-/* .card-body {
-  width: 33%;
-} */
-
+.git-style{
+  display: flex;
+  justify-content: center;
+  
+}
+.git-style:hover{
+background-color: black;
+text-decoration: none;
+}
 .card-title {
   font-size: 2.25rem;
   font-family: 'Poiret One', cursive;
+  text-decoration: none;
 }
 
 .card-tools {
   font-size: 1.1rem;
   font-family:'Poiret One', cursive;
+  text-decoration:none;
 }
 .img {
 
   position: cover;
   border-radius:1rem;
   height: 100%;
+  text-decoration: none;
   
 }
 
@@ -44,15 +53,18 @@
     position: relative;
     width: 300px;
     /* color: black */
+    text-decoration: none;
   }
   
   .card-1 {
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+    text-decoration: none;
   }
   
   .card-1:hover {
     box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+    text-decoration: none;
   }
   
  /* borrowed from codepen CodePen Home
