changed nav css style , moved some css class styles from index.css to respective component css files. Also started to use react bootstrap cdn styles for cards in portfolio component, imported cdn on header. Since I cant render images in development for some reason I'm tempted to deploy to github pages..

--- a/src/components/Nav/nav.css
+++ b/src/components/Nav/nav.css
@@ -1,4 +1,24 @@
 /* Add a black background color to the top navigation */
+
+header {
+  background-color: black;
+   /* background: var(--dark);  */
+  /* background-image:url(./components/Nav/hero.jpg); */
+}
+
+header a {
+  color: var(--light);
+}
+
+.flex-row {
+  display: flex;
+  flex-wrap: wrap;
+  opacity: 70%;
+}
+
+.navActive {
+  color:yellow;
+}
 .topnav {
     /* background-color: #333; */
     overflow: hidden;
