--- a/src/components/Projectcard/Projectcard.css
+++ b/src/components/Projectcard/Projectcard.css
@@ -48,7 +48,7 @@ text-decoration: none;
     display: flex;
     flex-direction: row;
     flex-wrap:wrap;
-    height: 300px;
+    /* height: 300px; */
     margin: 1rem;
     position: relative;
     width: 300px;
