used inline styling to make links open into new tabs, tweaked some bootstrap styling for the cards, I found that since I am dynamically rendering each card from one function, I cant seem to make manipulate their placement, its just default side by side. I've tried grid , bootstrap , and flex box, I cannot seem to get the cards to wrap.

--- a/src/components/Projectcard/Projectcard.css
+++ b/src/components/Projectcard/Projectcard.css
@@ -12,6 +12,23 @@
     text-decoration: none;
   }
 
+  .container {
+    display:flex;
+    flex-wrap: wrap;
+  }
+.link-style {
+  color: red;
+  display:flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  text-decoration:none;
+  
+
+}
+.link-style:hover {
+  background-color:black;
+  text-decoration: none;
+}
 .git-style{
   display: flex;
   justify-content: center;
