--- a/src/components/Projectcard/Projectcard.css
+++ b/src/components/Projectcard/Projectcard.css
@@ -41,9 +41,15 @@ text-decoration: none;
 .card-title {
   font-size: 2.25rem;
   font-family: 'Poiret One', cursive;
+  color:black;
   text-decoration: none;
 }
-
+.card-body {
+  color:black;
+}
+.card-text {
+  color:black;
+}
 .card-tools {
   font-size: 1.1rem;
   font-family:'Poiret One', cursive;
