--- a/src/components/Portfolio/portfolio.css
+++ b/src/components/Portfolio/portfolio.css
@@ -1,8 +1,13 @@
 /* css grid  */
 
 .grid {
-
-    display: flex;
+    display:grid;
+    /* grid-template-columns: 1fr 1fr 1fr;  */
+    grid-template-columns: repeat(auto-fill, minmax(500px, 1fr ));
+    /* grid-template-rows:auto; */
+    grid-gap: 1rem;
+    /* column-gap: 10px; */
+   /* display:flex; */
     text-decoration: none;
     
 }
