--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -7,8 +7,14 @@
   flex-direction: row;
   justify-content: center;
   flex-wrap: wrap;
+  text-decoration:none;
+  
 }
 
 .icon-1 > a {
   padding: 50px;
 }
+
+ .email {
+  text-decoration: none;
+} 
