--- a/src/components/Projectcard/Projectcard.css
+++ b/src/components/Projectcard/Projectcard.css
@@ -40,7 +40,8 @@ text-decoration: none;
 }
 .card-title {
   font-size: 2.25rem;
-  font-family: 'Poiret One', cursive;
+  font-family: monospace;
+  font-weight: bold;
   color:black;
   text-decoration: none;
 }
@@ -52,7 +53,7 @@ text-decoration: none;
 }
 .card-tools {
   font-size: 1.1rem;
-  font-family:'Poiret One', cursive;
+  font-family: monospace;
   text-decoration:none;
 }
 .img {
@@ -65,7 +66,7 @@ text-decoration: none;
 }
 
   .card {
-    background: #fff;
+    background: ivory ;
     border-radius: 1rem;
     border-style:groove;
     display: flex;
