--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,8 @@ main {
   --spacing-one: calc(1rem * 0.5);
   --spacing-two: calc(1rem);
   --spacing-five: calc(2.5rem);
-  background-image:url(./components/Nav/IMG-2570.jpg);
+  /* background-image:url(./components/Nav/IMG-2570.jpg); */
+  background-color: lightslategray;
 }
 
 * {
@@ -37,7 +38,7 @@ body {
   letter-spacing: .1em;
   background: var(--dark);
   color: var(--light);
-  font-family: 'Poiret One', cursive;
+  font-family:  monospace;
 
 }
 
