--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -1,3 +1,7 @@
+#about {
+color: black;
+}
+
 .cover-image {
 
     border:5px groove black;
@@ -5,15 +9,39 @@
     
 }
 
-.grid-container2 {
+.grid-container1 {
     display: grid;
     /* grid-template-columns: 1fr 1fr; */
     grid-gap: 1rem;
-    grid-template-columns: repeat(auto-fill, minmax(500px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+
+    /* outline: solid; */
 }
 
+.about-me-photo {
+ 
+  /* outline: dashed pink; */
+}
 .intro {
     margin-top: 5rem;
+    /* outline:dashed yellow; */
+   
+}
+
+.skills {
+  font-family: monospace;
+  display: flex;
+  justify-content: relative;
+  /* outline: dashed red; */
+  
+}
+
+.languages {
+  /* outline: dashed purple; */
+}
+
+.apps {
+  /* outline: dashed blue; */
 }
 
 /* On screens that are 600px wide or less, make the columns stack on top of each other instead of next to each other */
