--- a/src/index.css
+++ b/src/index.css
@@ -6,17 +6,16 @@ main {
  
 }
 :root {
-  --primary: #ffffff;
+  --primary: #130202;
   --secondary: #000000;
   --tertiary: #89c00a;
-  --light: #f5f1f1;
+  --light: #faf3f3;
   /* --dark: #13141663; */
   --darker: #552c2c;
   --error: rgb(228, 46, 1);
   --spacing-one: calc(1rem * 0.5);
   --spacing-two: calc(1rem);
   --spacing-five: calc(2.5rem);
-  /* background-image:url(./components/Nav/IMG-2570.jpg); */
   background-color: lightslategray;
 }
 
@@ -34,10 +33,10 @@ body {
   padding: 0;
   font-weight: 600;
   line-height: 1.5;
-  font-size: 18px;
+  font-size: 20px;
   letter-spacing: .1em;
   background: var(--dark);
-  color: var(--light);
+  color: var(--dark);
   font-family:  monospace;
 
 }
@@ -48,15 +47,17 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'courier', sans-serif;
+  font-family: 'monospace';
   font-weight: 600;
   margin: 5px 0;
   line-height: 1.25;
+  
 }
 
 h1 {
   font-size: 2.25rem;
   padding: 10px;
+
 }
 
 h2 {
@@ -237,31 +238,7 @@ textarea {
   cursor: pointer;
 }
 
-.modalBackdrop {
-	background: rgba(0, 0, 0, .65);
-	bottom: 0;
-	left: 0;
-	overflow: auto;
-	position: fixed;
-	right: 0;
-	top: 0;
-	z-index: 1;
-}
 
-.modalContainer {
-	background: var(--darker);
-	border-radius: 5px;
-	max-width: 100%;
-	margin: 50px auto;
-	padding: 15px;
-	width: 960px;
-}
-
-.modalTitle {
-	font-size: 18px;
-	font-weight: 600;
-	margin-bottom: 25px;
-}
 
 button {
 	background: var(--primary);
