--- a/src/components/Nav/nav.css
+++ b/src/components/Nav/nav.css
@@ -2,7 +2,7 @@
 
 header {
   background-color: rgb(22, 22, 17);
-  opacity: 70%;
+  /* opacity: 70%; */
   color: #faf3f3;
    /* background: var(--dark);  */
   /* background-image:url(./components/Nav/hero.jpg); */
