--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@ main {
   --spacing-one: calc(1rem * 0.5);
   --spacing-two: calc(1rem);
   --spacing-five: calc(2.5rem);
-  background-color: lightslategray;
+  background-color: ivory;
 }
 
 * {
