--- a/src/components/Projectcard/Projectcard.css
+++ b/src/components/Projectcard/Projectcard.css
@@ -72,11 +72,11 @@ text-decoration: none;
     display: flex;
     flex-direction: row;
     flex-wrap:wrap;
-    /* height: 300px; */
+    text-align: center;
     margin: 3rem;
     position: relative;
     width: 300px;
-    /* color: black */
+   
     text-decoration: none;
   }
   
