--- a/src/index.css
+++ b/src/index.css
@@ -226,10 +226,10 @@ textarea {
   padding-bottom: var(--spacing-two);
 }
 
-.card {
+/* .card {
   width: 25%;
   text-align: center;
-}
+} */
 
 .img-thumbnail {
   width: auto;
