--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -10,19 +10,41 @@ color: black;
 }
 
 .grid-container {
-    display: grid;
-    /* grid-template-columns: 1fr 1fr; */
+    display:grid;
+    
     grid-gap: 1rem;
-    grid-template-rows: repeat(auto-fill, minmax(200px, 500px));
+    grid-template-columns:auto;
+    grid-template-rows: repeat(auto-fill, minmax(100px, 500px));
     grid-row-gap:70px;
 }
 
 .hero {
     background-color: #f5f8fa;
-    height: 100%;
+    height: 80%;
     width: 100%;
 }
-
+.img-profile-wrapper {
+    display:flex;
+    justify-content: center;
+    flex-direction: row;
+    height: 50%;
+    padding:20px;
+}
+.img-profile {
+    border-radius:50%;
+    border-style:groove;
+    border-color:gray;    
+}
+.hero-title {
+    display:flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    font-family: sans-serif;
+    font-size: 30px;
+}
+.hero-title:hover {
+    opacity: 70%;
+}
 .intro {
     margin-top: 5rem;
    
