--- a/src/components/Nav/nav.css
+++ b/src/components/Nav/nav.css
@@ -6,12 +6,15 @@ header {
   outline-width:thin;
 }
 
+.grid-container {
+  display: grid;
+  grid-template-rows: repeat(auto-fill, minmax(100px, 500px))
+}
 .flex-row {
   display: flex;
   justify-content: space-between;
   flex-direction: row;
   flex-wrap: wrap;
-  padding:5px;
   list-style-type: none;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 2vh;
