--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -1,61 +1,69 @@
 #about {
-color: black;
+  color: black;
 }
 
 .cover-image {
-
-    border:5px groove black;
-    border-radius: 2rem;
-    
+  border: 5px groove black;
+  border-radius: 2rem;
 }
 
 .grid-container {
-    display:grid;
-    
-    grid-gap: 1rem;
-    grid-template-columns:auto;
-    grid-template-rows: repeat(auto-fill, minmax(100px, 500px));
-    grid-row-gap:70px;
+  display: grid;
+  outline: dashed pink;
+  grid-gap: 1rem;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 50% 200px auto;
+  /* grid-template-rows: repeat(auto-fill, minmax(100px, 500px)); */
+  /* grid-row-gap:70px; */
 }
 
 .hero {
-    background-color: #f5f8fa;
-    height: 80%;
-    width: 100%;
+  grid-column-start: 1;
+  grid-column-end: 5;
+  background-color: #f5f8fa;
+  height: 80%;
+  width: 100%;
 }
 .img-profile-wrapper {
-    display:flex;
-    justify-content: center;
-    flex-direction: row;
-    height: 50%;
-    padding:20px;
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  height: 50%;
+  padding: 20px;
 }
 .img-profile {
-    border-radius:50%;
-    border-style:groove;
-    border-color:gray;    
+  border-radius: 50%;
+  border-style: groove;
+  border-color: gray;
 }
 .hero-title {
-    display:flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    font-family: sans-serif;
-    font-size: 30px;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  font-family: sans-serif;
+  font-size: 30px;
 }
 .hero-title:hover {
-    opacity: 70%;
+  opacity: 70%;
 }
 .intro {
-    margin-top: 5rem;
-   
+  grid-column-start: 2;
+  grid-column-end: 3;
+  
 }
 
 .skills {
-  font-family: monospace;
+    grid-column-start: 2;
+    list-style-type: none;
+  grid-column-end: 3;
+  /* font-family: monospace; */
   display: flex;
   justify-content: relative;
-  flex-direction:column;
+  flex-direction: column;
   flex-wrap: wrap;
   /* outline: dashed red; */
-  
+}
+
+.apps-list {
+    list-style-type: square;
 }
